# AIGCSDK

./: .gitignore  LICENSE  README.md  WebRTSample.sln
CPlusPlus/: CommonUniverse.h  WebRT.cpp  WebRT.h
DotNetPlus/: app.manifest
MFCPlus/: CommonUniverse.h  CosmosApp.cpp  CosmosApp.h  TangramXmlParse.cpp  TangramXmlParse.h  WebRT.cpp  WebRT.h  WebRTApp.cpp  WebRTApp.h  WebRTAtl.cpp  WebRTAtl.h
Sample/ATL/: WebRT.h
Sample/ATL/ATLApp/: AIGC.cpp  AIGCBase.cpp  AIGCBase.h  ATLApp.cpp  ATLApp.idl  ATLApp.rc  ATLApp.vcxproj  ATLApp.vcxproj.filters  ATLApp_i.h  TangramXmlParse.cpp  WebRT.cpp  WebRT.h  pch.cpp  pch.h
Sample/Dotnet/Tangram/: AIGC.cs  AIGC1.cs  App.manifest  Form1.Designer.cs  Form1.cs  Program.cs  Tangram.app.html  Tangram.csproj
Sample/Dotnet/TangramMDI/: AIGC.cs  MDIParent.Designer.cs  Program.cs  TangramMDI.csproj  WebRTLoader.cs
Sample/DotnetComponent/CloudForm/: CloudForm.csproj  Form1.Designer.cs  ntpCtrl.Designer.cs
Sample/MFC/MFCDlgApp/: AIGC.cpp  (+8 more)
WinForm/: AIGC.cs  WebRTDelegate.cs  WebRTLoader.cs
cpp/: AIGC.cpp  CommonUniverse.h  TangramXmlParse.cpp  TangramXmlParse.h  WebRT.cpp  WebRT.h  WebRTApp.cpp  WebRTApp.h  jniforchrome.h
src/: AIGC.cpp  AIGC.cs  AIGC.h  AIGC.manifest  AIGCBrowserSample.sln  AIGCWPF.cs  WebRTSample.sln
src/AIGCBrowserSrc/: chromiumver.txt
src/AIGCBrowserSrc/ChromiumSrcPatch/ui/webui/resources/js/metrics_reporter/: BUILD.gn
src/AIGCSDK/: AIGC.cpp  AIGC.cs  AIGC.h  AIGC2.cpp  AIGC2.h  AIGC2.manifest  AIGCBrowserSharedProject.projitems  AIGCBrowserSharedProject.shproj  AIGCWpf.cs
src/DotNetPlus/: Sunny.cs
(+5194 files in other folders)
