# Copyright 2022 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/tools/bindings/mojom.gni")

mojom("mojo_bindings") {
  sources = [ "metrics_reporter.mojom" ]

  # The generated mojo bindings are part of the ui/webui/resources/js
  # build_webui() target, so are served from tangram://resources/js/
  webui_module_path = "tangram://resources/js/"
  public_deps = [ "//mojo/public/mojom/base" ]
}
